--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,68 @@
+asttokens==2.2.1
+backcall==0.2.0
 certifi==2022.12.7
+chardet==3.0.4
 charset-normalizer==3.1.0
 colorama==0.4.6
+comm==0.1.3
+debugpy==1.6.7
+decorator==5.1.1
+et-xmlfile==1.1.0
+executing==1.2.0
 filelock==3.9.0
+googletrans==4.0.0rc1
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2023.1.1
+httpcore==0.9.1
+httpx==0.13.3
 huggingface==0.0.1
 huggingface-hub==0.13.4
-idna==3.4
+hyperframe==5.2.0
+idna==2.10
+IProgress==0.4
+ipykernel==6.22.0
+ipython==8.12.0
+jedi==0.18.2
 Jinja2==3.1.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
 mpmath==1.2.1
+nest-asyncio==1.5.6
 networkx==3.0
 numpy==1.24.3
+openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.0
+parso==0.8.3
+pickleshare==0.7.5
+platformdirs==3.2.0
+prompt-toolkit==3.0.38
+psutil==5.9.5
+pure-eval==0.2.2
+Pygments==2.15.1
 python-dateutil==2.8.2
 pytz==2023.3
+pywin32==306
 PyYAML==6.0
+pyzmq==25.0.2
 regex==2023.3.23
 requests==2.28.2
+rfc3986==1.5.0
 six==1.16.0
+sniffio==1.3.0
+stack-data==0.6.2
 sympy==1.11.1
 tokenizers==0.13.3
 torch==2.0.0+cu117
+tornado==6.3.1
 tqdm==4.65.0
+traitlets==5.9.0
 transformers==4.28.1
 typing_extensions==4.4.0
 tzdata==2023.3
 urllib3==1.26.15
+wcwidth==0.2.6
