--- a/backend/voicepassing/build.gradle
+++ b/backend/voicepassing/build.gradle
@@ -31,7 +31,8 @@ dependencies {
 	// jpa
 	implementation  'org.springframework.boot:spring-boot-starter-data-jpa'
 
-
+	// socket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.6.2'
 
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
