--- a/backend/voicepassing/src/main/resources/application.properties
+++ b/backend/voicepassing/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 #spring.datasource.url=jdbc:mysql://j8a505.p.ssafy.io:3306/billboard?serverTimezone=UTC&rewriteBatchedStatements=true
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/homezakaya?serverTimezone=UTC
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-server.port=8081
+server.port=8080
 
 logging.level.xyz.quietjun=trace
 
