Feature : best model 저장기능 추가
Former-commit-id: f4d7c8c6fc756ad59b01403f450c7a3841da6de9

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,8 @@ dataset/final_data.xlsx
 data_augmentation/__pycache__/
 data_augmentation/Mecab-ko-for-Google-Colab/
 
+# 모델 결과
+ml_task/result/
+
 # pyc
 *.pyc
