--- a/backend/voicepassing/build.gradle
+++ b/backend/voicepassing/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 	// javax.xml.bind
 	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
 
+	// https://mvnrepository.com/artifact/org/jaudiotagger
+	implementation 'org:jaudiotagger:2.0.3'
 
 
 	// swagger
