--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -61,8 +61,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   # 추가할 이미지를 작성하는곳
   assets:
-    - images/Search.png
+    - images/SearchMain.png
+    - images/VoiceLogo.png
+    - images/MainImg.png
+    - images/ResultImg.png
     - images/SearchImg.png
+    - images/StaticsImg.png
+    - images/AnalyticsImg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
