Feat : 플라스크로 m4a파일 복원하는 서버 구현

--- a/backend/untrunc/Dockerfile
+++ b/backend/untrunc/Dockerfile
@@ -23,13 +23,14 @@ FROM ubuntu:bionic
 ARG FF_VER=shared
 
 RUN apt-get update && [ "$FF_VER" = 'shared' ] && \
-	apt-get -y install --no-install-recommends libavformat57 libavcodec57 libavutil55 && \
+	apt-get -y install --no-install-recommends libavformat57 libavcodec57 libavutil55 python3-setuptools python3-pip && \
 	rm -rf /var/lib/apt/lists/* || true
 COPY --from=build /untrunc-src/untrunc /bin/untrunc
+
+# copy code
+COPY ./requirement.txt requirement.txt
+RUN pip3 install -r requirement.txt
 
 # non-root user
 RUN useradd untrunc
 USER untrunc
-
-# execution
-ENTRYPOINT ["/bin/untrunc"]
