Refactor : untrunc도메인 환경변수로 설정, 주고받는 형태 객체로 받을 수 있도록 설정

--- a/backend/untrunc/Dockerfile
+++ b/backend/untrunc/Dockerfile
@@ -31,6 +31,6 @@ COPY --from=build /untrunc-src/untrunc /bin/untrunc
 COPY ./requirement.txt requirement.txt
 RUN pip3 install -r requirement.txt
 
-# non-root user
-RUN useradd untrunc
-USER untrunc
+# 생략
+# RUN useradd voicepassing
+# USER voicepassing
