--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ MYSQL_DATABASE=voicepassing
 MYSQL_ROOT_PASSWORD=1234
 MYSQL_USER=voicepassing
 MYSQL_PASSWORD=voicepassing
-
+DOMAIN_UNTRUNC=http://untrunc:8000
 MYSQL_URL=jdbc:mysql://k8a607.p.ssafy.io:3305/voicepassing?serverTimezone=UTC
