--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - DB_URL=${MYSQL_URL}
       - DB_USER=${MYSQL_USER}
       - DB_PASSWORD=${MYSQL_PASSWORD}
+      - DOMAIN_UNTRUNC=${DOMAIN_UNTRUNC}
       - SPRING_RECORD_TEMP_DIR=/data
     ports:
       - 8200:8080
