--- a/frontend/voicepassing/android/app/src/main/AndroidManifest.xml
+++ b/frontend/voicepassing/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.voicepassing">
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
    <application
         android:label="voicepassing"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <service android:name="flutter.overlay.window.flutter_overlay_window.OverlayService" android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
