--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   circle_progress_bar: ^0.1.1
   styled_text: ^7.0.0
+  flutter_overlay_window: ^0.4.1
 
 dev_dependencies:
   flutter_test:
