--- a/backend/voicepassing/build.gradle
+++ b/backend/voicepassing/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	// spring boot
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
