--- a/backend/voicepassing/Dockerfile
+++ b/backend/voicepassing/Dockerfile
@@ -27,7 +27,7 @@
 FROM openjdk:11
 ARG JAR_FILE=./build/libs/voicepassing-0.0.1-SNAPSHOT.jar
 
-# COPY ${JAR_FILE} app.jar
+COPY ${JAR_FILE} app.jar
 
 
 EXPOSE 8080
