In Progress : Jenkins pipeline

--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@
 #.gitignore처리할 것
 MYSQL_DATABASE=voicepassing
 MYSQL_ROOT_PASSWORD=1234
-MYSQL_USER=voicepassing
-MYSQL_PASSWORD=voicepassing
+DB_USER=voicepassing
+DB_PASSWORD=voicepassing
+DB_URL=jdbc:mysql://k8a607.p.ssafy.io:3305/voicepassing?serverTimezone=UTC
+
 DOMAIN_UNTRUNC=http://untrunc:8000
-MYSQL_URL=jdbc:mysql://k8a607.p.ssafy.io:3305/voicepassing?serverTimezone=UTC
+SPRING_RECORD_TEMP_DIR=/data
