Feat : 전화 수신 후 생성되는 통화 녹음 파일 바이트 형태로 웹소켓 전송

--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_overlay_window: ^0.4.1
   phone_state: ^1.0.2
   permission_handler: ^10.2.0
+  web_socket_channel: ^2.4.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
