--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,6 @@
 version: '3.3'
-services:
-  spring:
-    # 
-    build: ./backend/voicepassing
-    container_name: spring
-    environment:
-      - DB_URL=${MYSQL_URL}
-      - DB_USER=${MYSQL_USER}
-      - DB_PASSWORD=${MYSQL_PASSWORD}
-      - DOMAIN_UNTRUNC=${DOMAIN_UNTRUNC}
-      - SPRING_RECORD_TEMP_DIR=/data
-    ports:
-      - 8080:8080
-    volumes:
-      # - ./backend/voicepassing/build/libs/voicepassing-0.0.1-SNAPSHOT.jar:/app.jar
-      - VOICE_PASSING:/data
-    command: java -jar build/libs/voicepassing-0.0.1-SNAPSHOT.jar
 
+services:
   untrunc:
     build: ./backend/untrunc
     container_name: untrunc
@@ -24,9 +8,14 @@ services:
     volumes:
       - ./backend/untrunc/app.py:/app.py
       - VOICE_PASSING:/data
+    networks:
+      - ssafy-net
     ports:
       - 8300:8000
 volumes:
   VOICE_PASSING:
     external: true
 
+networks:
+  ssafy-net:
+    external: true
