--- a/backend/voicepassing/build.gradle
+++ b/backend/voicepassing/build.gradle
@@ -63,6 +63,13 @@ dependencies {
 
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
+	// Apache HttpClient
+	implementation 'org.apache.httpcomponents:httpclient:4.5.12'
+	implementation 'org.apache.httpcomponents:httpmime:4.3.1'
+
+	// Gson
+	implementation 'com.google.code.gson:gson:2.8.5'
+
 
 }
 
