--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,20 @@ services:
       - FLASK_FILE_DUPLICATE=0
     ports:
       - 8300:8000
+
+  fastapi:
+    build: ./backend/fastAPI
+    container_name: fastapi
+    command: uvicorn main:app --host 0.0.0.0 --port 80 --reload
+    ports: 
+      - 8000:80
+    volumes:
+      - ./backend/fastAPI/server_task:/src
+    networks:
+     - ssafy-net
+
+    
+
 volumes:
   VOICE_PASSING:
     external: true
