Feat : spring env 파일 수정
Former-commit-id: 365ba794fdcf8cbea1b978cdbfe613711589a2d7

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DB_URL=jdbc:mysql://k8a607.p.ssafy.io:3305/voicepassing?serverTimezone=UTC
 
 DOMAIN_UNTRUNC=http://untrunc:8000
 SPRING_RECORD_TEMP_DIR=/data/WebSocket
+
+AI_SERVER_URI=http://fastapi:80
