--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   intl: ^0.18.1
   unique_device_id: ^0.1.2
+  provider: ^6.0.5
 
 
 dev_dependencies:
