Style : 스타일 수정
Former-commit-id: 2be177a159751a307a9638beef45186d80f90f05

--- a/backend/voicepassing/src/main/resources/application.properties
+++ b/backend/voicepassing/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 server.port=8080
 
 logging.level.xyz.quietjun=trace
-
+logging.level.org.hibernate=error
 #server.ssl.key-store=classpath:keystore.p12
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-store-password=ssafy
