--- a/frontend/voicepassing/android/app/src/main/AndroidManifest.xml
+++ b/frontend/voicepassing/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
    <application
         android:label="voicepassing"
         android:name="${applicationName}"
