--- a/frontend/voicepassing/android/app/src/main/AndroidManifest.xml
+++ b/frontend/voicepassing/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
-   <application
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <application
         android:label="voicepassing"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
