--- a/backend/voicepassing/src/main/resources/application.properties
+++ b/backend/voicepassing/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.level.org.hibernate=error
 #dialect ??
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.jdbc.batch_size=500
