--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   http: ^0.13.5
+  clipboard: ^0.1.3
   url_launcher: ^6.1.10
   file_picker: ^5.2.11
   dio: ^5.1.1
