Fix : 누락된 패키지 추가
Former-commit-id: 6f53bf81c847261283a596137887015351329d1e

--- a/backend/voicepassing/build.gradle
+++ b/backend/voicepassing/build.gradle
@@ -34,7 +34,9 @@ dependencies {
 
 	// socket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.6.2'
-
+	
+	//commons-io
+	implementation 'commons-io:commons-io:2.11.0'
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
