--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   fl_chart: ^0.62.0
   vibration: ^1.7.7
   call_log: ^4.0.0
+  awesome_notifications: ^0.7.4+1
 
 dev_dependencies:
   flutter_test:
