--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
 
   fl_chart: ^0.62.0
   vibration: ^1.7.7
-  # awesome_notifications: ^0.7.4+1
+  awesome_notifications: ^0.7.4+1
   flutter_wear_os_connectivity: ^1.0.0
   android_intent_plus: ^4.0.0
 
