--- a/frontend/voicepassing/assets/config/.env
+++ b/frontend/voicepassing/assets/config/.env
@@ -1,2 +1,2 @@
-#BASE_URL=http://k8a607.p.ssafy.io:8080/api
-BASE_URL=http://10.0.2.2:8080/api
+BASE_URL=http://k8a607.p.ssafy.io:8080/api
+#BASE_URL=http://10.0.2.2:8080/api
