In Progress : Background

--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   awesome_notifications: ^0.7.4+1
   flutter_wear_os_connectivity: ^1.0.0
   android_intent_plus: ^4.0.0
+  flutter_background_service: ^2.4.6
+  shared_preferences: ^2.1.1
+  flutter_background_service_android: ^3.0.3
 
 dev_dependencies:
   flutter_test:
