--- a/frontend/voicepassing/android/app/build.gradle
+++ b/frontend/voicepassing/android/app/build.gradle
@@ -90,5 +90,9 @@ flutter {
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "com.google.android.support:wearable:2.8.1"
+    compileOnly "com.google.android.wearable:wearable:2.8.1"
+    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
