--- a/frontend/voicepassing/android/app/src/main/AndroidManifest.xml
+++ b/frontend/voicepassing/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
+    
+    <uses-feature android:name="android.hardware.type.watch" />
     <application
         android:label="voicepassing"
         android:name="${applicationName}"
