--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   awesome_notifications: ^0.7.4+1
   flutter_wear_os_connectivity: ^1.0.0
   android_intent_plus: ^4.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
