In Progress : 빌드  설정 수정

--- a/frontend/voicepassing/android/app/build.gradle
+++ b/frontend/voicepassing/android/app/build.gradle
@@ -47,6 +47,11 @@ android {
     }
 
     sourceSets {
+        main {
+            resources {
+                srcDirs += ['src/main/res/values']
+            }
+        }
         main.java.srcDirs += 'src/main/kotlin'
     }
 
