--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   circle_progress_bar: ^0.1.1
   styled_text: ^7.0.0
-  flutter_overlay_window: ^0.4.1
+  #flutter_overlay_window: ^0.4.1
+  flutter_overlay_window: ^0.4.3
   phone_state: ^1.0.2
   permission_handler: ^10.2.0
 
@@ -55,7 +56,8 @@ dependencies:
   vibration: ^1.7.7
   awesome_notifications: ^0.7.4+1
   flutter_wear_os_connectivity: ^1.0.0
-  android_intent_plus: ^4.0.0
+  android_intent_plus: ^3.1.9
+  #android_intent_plus: ^4.0.0
   provider: ^6.0.5
 
 dev_dependencies:
