--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -57,14 +57,16 @@ dependencies:
   awesome_notifications: ^0.7.4+1
   flutter_wear_os_connectivity: ^1.0.0
   android_intent_plus: ^3.1.9
-
+  draggable_home: ^1.0.2
   flutter_background_service: ^2.4.6
   shared_preferences: ^2.1.1
   flutter_background_service_android: ^3.0.3
   loading_animation_widget: ^1.2.0+4
-
+  material_design_icons_flutter: ^6.0.7096
   provider: ^6.0.5
   call_log: ^4.0.0
+  timelines: ^0.1.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
