--- a/frontend/voicepassing/pubspec.yaml
+++ b/frontend/voicepassing/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   provider: ^6.0.5
   call_log: ^4.0.0
 
+  easy_folder_picker: ^1.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
